Todo chill por ahora antes el authorization

--- a/PlazoFijoSistem/PlazoFijoSistem.csproj
+++ b/PlazoFijoSistem/PlazoFijoSistem.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Views\Plazos\Create.cshtml" />
+    <None Include="Views\Plazos\Delete.cshtml" />
+    <None Include="Views\Plazos\Details.cshtml" />
+    <None Include="Views\Plazos\Edit.cshtml" />
+    <None Include="Views\Plazos\Index.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
       <PrivateAssets>all</PrivateAssets>
